2001-09-09  Christoph Pfisterer  <cp@chrisp.de>

	* Package.pm (get_matching_versions): Implemented the version
	comparisons supported by dpkg.
	* PkgVersion.pm (initialize): Removed special handling for the
	Depends field.
	(get_depends): Removed, not needed any more.
	(resolve_depends): Rewritten to allow versioned dependencies and
	alternatives.
	(get_binary_depends): New function to generate dependencies for
	the .deb.
	(phase_build): Use get_binary_depends for the Depends field. Added
	Recommends, Suggests, Enhances and Pre-Depends.

2001-09-07  Christoph Pfisterer  <cp@chrisp.de>

	* Bootstrap.pm: Create dpkg status area earlier.

2001-09-06  Christoph Pfisterer  <cp@chrisp.de>

	* Status.pm (list): Added list() method to retreive the whole
	list, independent of installation status.
	* Package.pm (scan_all): Get list of known packages from dpkg and
	merge it into the info read from files.
	(inject_description): New function to centralize creation of
	version objects.
	* PkgVersion.pm: Added checks for dummy packages created from the
	dpkg status file.

2001-09-04  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (cmd_scanpackages): Fixes to section and priority
	determination.

	* Config.pm (initialize): Bail out if Basepath is not set in the
	config file.

2001-09-03  Christoph Pfisterer  <cp@chrisp.de>

	* Services.pm: Removed obsolete FindBin import.

	* Package.pm: Enable on-demand loading of package descriptions
	through require_packages().
	* Engine.pm: Use require_packages() for on-demand loading of
	package descriptions. Fixed the flag for some commands. Adapted
	the rescan command.
	* Bootstrap.pm: Use require_packages() instead of cmd_rescan().
	* SelfUpdate.pm: Use require_packages() to reload package info
	after update.

	* Engine.pm: Load specialized modules on demand only.

2001-09-03  Max Horn  <max@quendi.de>

	* Bootstrap.pm: Fixed bootstrap by forcing the package descriptions
	to be read in.

2001-08-31  Christoph Pfisterer  <cp@chrisp.de>
